# aws-s3-compare-paths

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  pyrightconfig.json
src/: compare.py  config.py  constants.py  extract.py  extractors.py  main.py  s3-uris-to-analyze.txt  utils.py  what-to-analyze.txt
src/exports/: README.md
src/files-with-paths/: README.md  paths-to-analyze.txt
